# ai-dungeon-master

./: .dockerignore  .gitignore  CONTRIBUTING.md  LICENCE  LICENSE  README.MD  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  server_settings.db  validation_report.md
.bmad-core/: core-config.yaml  install-manifest.yaml
.bmad-core/tasks/: validate-next-story.md
data/modules/: .placeholder
data/saves/: .placeholder
docs/: architecture.md  commands.md  prd.md  project-brief-phase2.md  ui-ux-specification.md
docs/architecture/: api-specification.md  coding-standards.md  components.md  core-workflows.md  data-models.md  database-schema.md  external-apis.md  high-level-architecture.md  index.md  infrastructure-and-deployment.md  introduction.md  key-strategies.md  observability.md  persistence-strategy.md  rest-api-spec.md  source-tree.md  tech-stack.md  testing-strategy.md  unified-project-structure.md
docs/phase2/: notes.md  prd2.md  project-brief-phase2.md  ui-ux-specification-phase2.md
docs/prd/: epic-1-core-bot-platform-user-onboarding.md  epic-2-the-ai-dungeon-master-engine.md  epic-3-example.md  epic-list.md  goals-and-background-context.md  index.md  requirements.md  technical-assumptions.md  user-interface-design-goals.md
docs/stories/: 1.1.story.md  1.2.story.md  1.3.story.md  1.3_validation_report.md  1.4.story.md  1.5.story.md  1.6.story.md  1.7.story.md
docs/ui-ux-specification/: accessibility-requirements.md  animation-micro-interactions.md  command-structure.md  component-library-design-system-minimal-style-guide.md  index.md  (+8 more)
