[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_dm_project"
version = "0.1.0"
description = "AI Dungeon Master build with BMAD v4"
authors = [
    { name = "Nikolaos Papadopoulos", email = "nikolaospap94@gmail.com" }
]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]